--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7546,8 +7546,47 @@ body {
   border-right: none;
 }
 
+.pagination .page-item.active .page-link {
+  background-color: #4cd195 !important;
+  margin-top: 30px;
+}
+
+table.dataTable > tbody > tr.child ul.dtr-details {
+  width: 100%;
+}
+
+table.dataTable > tbody > tr.child ul.dtr-details > li {
+  text-align: left !important;
+}
+
+.pg-next,
+.pg-pre {
+  color: #4cd195;
+}
+
+@media screen and (max-width: 767px) {
+  div.dataTables_wrapper div.dataTables_length,
+  div.dataTables_wrapper div.dataTables_filter,
+  div.dataTables_wrapper div.dataTables_info,
+  div.dataTables_wrapper div.dataTables_paginate {
+    text-align: left;
+  }
+
+  div.dataTables_filter {
+    margin: 15px 0px;
+  }
+
+  div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+    justify-content: end !important;
+  }
+}
+
 .pb-8 {
   padding-bottom: 80px;
+}
+
+.mb-8 {
+  margin-bottom: 80px;
 }
 
 .btn-theme {
