--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,14 +3,20 @@
 @import "~mdbootstrap/css/mdb.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
-// ============== Custom Css ==============
+$primary-col: #4cd195;
+
+// ============== Custom scss ==============
 @import "./sidebar";
+@import "./custom-dtb";
 
 // ============= Global Css =============
-$primary-col: #4cd195;
 
 .pb-8 {
     padding-bottom: 80px;
+}
+
+.mb-8 {
+    margin-bottom: 80px;
 }
 
 .btn-theme {
