--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7581,12 +7581,47 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   }
 }
 
+.emp-profile {
+  width: 90px;
+  height: 150px;
+  border-radius: 5px;
+}
+
+.emp-profile-circle {
+  width: 160px;
+  height: 160px;
+  border: 3px solid #4cd195;
+  border-radius: 50%;
+}
+
+.emp-edit-profile {
+  border: 2px solid lightgray !important;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-top: -65px;
+}
+
+.emp-profile-btn {
+  background: #4cd195;
+  left: 126px;
+  padding: 7px 10px !important;
+}
+
+.border-dash {
+  border-left: 3px dashed lightgray;
+}
+
 .pb-8 {
   padding-bottom: 80px;
 }
 
 .mb-8 {
   margin-bottom: 80px;
+}
+
+.text-semi {
+  color: #555;
 }
 
 .btn-theme {
@@ -7611,11 +7646,5 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 .bottom-menu a span {
   font-size: 14px;
   font-weight: bold;
-}
-
-.emp-profile {
-  width: 90px;
-  height: 150px;
-  border-radius: 5px;
 }
 
