--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,10 +4,12 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
 $primary-col: #4cd195;
+$semi-dark: #555;
 
 // ============== Custom scss ==============
 @import "./sidebar";
 @import "./custom-dtb";
+@import "./employee";
 
 // ============= Global Css =============
 
@@ -17,6 +19,10 @@ $primary-col: #4cd195;
 
 .mb-8 {
     margin-bottom: 80px;
+}
+
+.text-semi {
+    color: $semi-dark;
 }
 
 .btn-theme {
@@ -40,10 +46,4 @@ $primary-col: #4cd195;
             font-weight: bold;
         }
     }
-}
-
-.emp-profile {
-    width: 90px;
-    height: 150px;
-    border-radius: 5px;
 }
