--- a/resources/sass/_custom-dtb.scss
+++ b/resources/sass/_custom-dtb.scss
@@ -1,3 +1,8 @@
+mark {
+    background: orange;
+    color: black;
+}
+
 .pagination .page-item.active .page-link {
     background-color: $primary-col !important;
     margin-top: 30px;
