--- a/resources/sass/_employee.scss
+++ b/resources/sass/_employee.scss
@@ -6,9 +6,9 @@
 }
 
 .emp-profile-circle {
-    width: 160px;
-    height: 160px;
-    border: 3px solid $primary-col;
+    width: 120px;
+    height: 120px;
+    border: 2px solid $primary-col;
     border-radius: 50%;
 }
 
@@ -28,4 +28,10 @@
 
 .border-dash {
     border-left: 3px dashed lightgray;
+}
+
+@media screen and (max-width: 767px) {
+    .border-dash {
+        border-left: none;
+    }
 }
