--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7236,6 +7236,8 @@ body {
      object-fit: cover;
   height: 100%;
   width: 100%;
+  background-color: #eee;
+  padding: 2px;
 }
 
 .sidebar-wrapper .sidebar-header .user-info {
@@ -7522,8 +7524,8 @@ body {
 .chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before,
 .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus + span,
 .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active a i {
-  color: #16c7ff;
-  text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
+  color: #4cd195;
+  text-shadow: 0px 0px 10px #4cd195 22, 199, 255, 0.5;
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li a i,
@@ -7598,9 +7600,9 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 }
 
 .emp-profile-circle {
-  width: 160px;
-  height: 160px;
-  border: 3px solid #4cd195;
+  width: 120px;
+  height: 120px;
+  border: 2px solid #4cd195;
   border-radius: 50%;
 }
 
@@ -7622,6 +7624,12 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   border-left: 3px dashed lightgray;
 }
 
+@media screen and (max-width: 767px) {
+  .border-dash {
+    border-left: none;
+  }
+}
+
 .pb-8 {
   padding-bottom: 80px;
 }
@@ -7632,6 +7640,10 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 
 .text-semi {
   color: #555;
+}
+
+.text-theme {
+  color: #4cd195;
 }
 
 .btn-theme {
@@ -7656,5 +7668,10 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 .bottom-menu a span {
   font-size: 14px;
   font-weight: bold;
+  color: #555 !important;
+}
+
+.bottom-menu a i {
+  font-size: 17px;
 }
 
