--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -180,6 +180,8 @@ body {
     object-fit: cover;
     height: 100%;
     width: 100%;
+    background-color: #eee;
+    padding: 2px;
 }
 
 .sidebar-wrapper .sidebar-header .user-info {
@@ -461,8 +463,8 @@ body {
     a:hover:before,
 .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus + span,
 .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active a i {
-    color: #16c7ff;
-    text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
+    color: $primary-col;
+    text-shadow: 0px 0px 10px $primary-col(22, 199, 255, 0.5);
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li a i,
