--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -491,3 +491,9 @@ body {
 .chiller-theme .sidebar-footer > a:last-child {
     border-right: none;
 }
+
+.active-item {
+    a {
+        color: $primary-col !important;
+    }
+}
