add role-column in employee-page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7632,6 +7632,14 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   border-left: 3px dashed lightgray;
 }
 
+.select2-container {
+  width: 100% !important;
+}
+
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+  border: 1px solid #555;
+}
+
 @media screen and (max-width: 767px) {
   .border-dash {
     border-left: none;
