--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,7 @@
 @import "~mdbootstrap/css/bootstrap.min.css";
 @import "~mdbootstrap/css/mdb.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~bootstrap-pincode-input/css/bootstrap-pincode-input.css";
 
 $primary-col: #4cd195;
 $semi-dark: #555;
