--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 @import "~mdbootstrap/css/mdb.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap-pincode-input/css/bootstrap-pincode-input.css";
+@import "~sweetalert2/src/sweetalert2.scss";
 
 $primary-col: #4cd195;
 $semi-dark: #555;
