make salary-page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // MD Bootstrap and Other libraries
 @import "~mdbootstrap/css/bootstrap.min.css";
+@import "~@ttskch/select2-bootstrap4-theme/dist/select2-bootstrap4.min.css";
 @import "~mdbootstrap/css/mdb.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap-pincode-input/css/bootstrap-pincode-input.css";
@@ -58,3 +59,4 @@ $semi-dark: #555;
         }
     }
 }
+
