--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9422,3 +9422,18 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   font-size: 17px;
 }
 
+.preview_img img {
+  border-radius: 5px;
+  width: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 3px;
+}
+
+.profile-thumb-2 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #4cd195;
+}
+
