--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9430,10 +9430,43 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   margin: 3px;
 }
 
-.profile-thumb-2 {
+.leader-thumb-2,
+.member-thumb-2 {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: 1px solid #4cd195;
+  margin-left: -15px;
+}
+
+.member-thumb-2 {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #555;
+}
+
+.leader-thumb-2:first-child {
+  margin-left: 0;
+}
+
+.member-thumb-2:first-child {
+  margin-left: 0;
+}
+
+.pdf-thumbnail {
+  background: #fff;
+  width: 60px;
+  height: 75px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin: 3px;
+  display: inline-block;
+  text-align: center;
+  color: #000;
+}
+
+.pdf-thumbnail i {
+  font-size: 30px;
 }
 
