--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap-pincode-input/css/bootstrap-pincode-input.css";
 @import "~sweetalert2/src/sweetalert2.scss";
+@import "~viewerjs/dist/viewer.css";
 
 $primary-col: #4cd195;
 $semi-dark: #555;
